--- a/app/src/main/res/layout/activity_confirm_post.xml
+++ b/app/src/main/res/layout/activity_confirm_post.xml
@@ -8,120 +8,100 @@
 
 
     <TextView
-        android:id="@+id/confirmPostTitleId"
-        android:layout_width="196dp"
-        android:layout_height="57dp"
-        android:text="Confirm Post"
-        android:textSize="32dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.043" />
-
-    <Button
-        android:id="@+id/cancelPostButtonId"
-        android:layout_width="94dp"
-        android:layout_height="44dp"
-        android:text="Cancel Post"
-        android:textSize="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.981"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.042" />
-
-    <ImageView
-        android:id="@+id/imageInConfirmPostId"
-        android:layout_width="309dp"
-        android:layout_height="181dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.156"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.79"
-        app:srcCompat="@android:drawable/ic_menu_camera" />
-
-    <Button
-        android:id="@+id/backButtonId"
-        android:layout_width="94dp"
-        android:layout_height="44dp"
-        android:text="back"
-        android:textSize="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.009"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.042" />
-
-
-    <TextView
-        android:id="@+id/postTitleId"
-        android:layout_width="312dp"
-        android:layout_height="39dp"
-        android:layout_marginBottom="10dp"
+        android:id="@+id/directionsListId"
+        android:layout_width="293dp"
+        android:layout_height="40dp"
         android:fontFamily="cursive"
-        android:text="TextView"
-        android:textSize="25dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageInConfirmPostId"
+        android:text="Your List of Directions:"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toTopOf="@+id/recyclerViewDirectionsId"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.466"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.997" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewIngredientId"
-        android:layout_width="393dp"
-        android:layout_height="141dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.388"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.157" />
+        app:layout_constraintVertical_bias="0.979" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewDirectionsId"
-        android:layout_width="395dp"
-        android:layout_height="125dp"
-        android:layout_marginBottom="11dp"
-        app:layout_constraintBottom_toTopOf="@+id/postTitleId"
+        android:layout_width="295dp"
+        android:layout_height="189dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.437"
+        app:layout_constraintHorizontal_bias="0.445"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.887" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewIngredientId"
+        android:layout_width="287dp"
+        android:layout_height="201dp"
+        android:layout_marginBottom="56dp"
+        app:layout_constraintBottom_toTopOf="@+id/directionsListId"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.443"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
 
     <Button
-        android:id="@+id/uploadPostId"
-        android:layout_width="76dp"
-        android:layout_height="34dp"
-        android:text="Upload"
-        android:textSize="10dp"
+        android:id="@+id/buttonAddMoreIngredients"
+        android:layout_width="102dp"
+        android:layout_height="29dp"
+        android:layout_marginTop="9dp"
+        android:text="Add More?"
+        android:textSize="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.983"
+        app:layout_constraintHorizontal_bias="0.443"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.976" />
+        app:layout_constraintTop_toBottomOf="@+id/recyclerViewIngredientId"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <Button
+        android:id="@+id/buttonAddMoreDirections"
+        android:layout_width="102dp"
+        android:layout_height="29dp"
+        android:layout_marginBottom="16dp"
+        android:text="Add More?"
+        android:textSize="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.113"
+
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/recyclerViewDirectionsId"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <Button
+        android:id="@+id/continuePostId"
+        android:layout_width="102dp"
+        android:layout_height="29dp"
+        android:layout_marginBottom="16dp"
+        android:text="Continue"
+        android:textSize="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.912"
+
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/recyclerViewDirectionsId"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
-        android:id="@+id/descriptionConfirmPageId"
-        android:layout_width="301dp"
-        android:layout_height="69dp"
-        android:layout_marginBottom="4dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/ingredientListId"
+        android:layout_width="287dp"
+        android:layout_height="47dp"
+        android:fontFamily="cursive"
+        android:text="Your List of Ingredients:"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toTopOf="@+id/recyclerViewIngredientId"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.145"
+        app:layout_constraintHorizontal_bias="0.419"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageInConfirmPostId"
-        app:layout_constraintVertical_bias="0.714" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.921" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
