--- a/app/src/main/res/layout/activity_explore.xml
+++ b/app/src/main/res/layout/activity_explore.xml
@@ -2,9 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/explorePageID"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id = "@+id/explorePageID"
     tools:context=".ExploreActivity">
 
     <ImageButton
@@ -23,14 +23,13 @@
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/containsSearchFilterSettings"
-        android:layout_width="393dp"
-        android:layout_height="42dp"
+        android:layout_width="413dp"
+        android:layout_height="49dp"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.545"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.001" />
@@ -40,7 +39,7 @@
         android:layout_width="184dp"
         android:layout_height="50dp"
         android:fontFamily="cursive"
-        android:text="Explore Page"
+        android:text="Explore"
         android:textColor="@color/black"
         android:textSize="14sp"
         app:backgroundTint="@color/white"
@@ -102,14 +101,13 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/listOfPostsRecycler"
-        android:layout_width="386dp"
-        android:layout_height="480dp"
+        android:layout_width="391dp"
+        android:layout_height="455dp"
         app:layout_constraintBottom_toTopOf="@+id/profileButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.48"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title_Explore_Page"
-        app:layout_constraintVertical_bias="0.727" />
+        app:layout_constraintVertical_bias="0.509" />
 
     <ImageButton
         android:id="@+id/profileButton"
@@ -121,5 +119,19 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.964"
         app:srcCompat="@drawable/sgprofilevertwo" />
+
+    <ProgressBar
+        android:id="@+id/progressBar2"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="73dp"
+        android:layout_height="72dp"
+        android:layout_centerInParent="true"
+        android:visibility="visible"
+        android:indeterminate="true"
+        android:progressDrawable="@drawable/circular_progress_bar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
