Designed card format for each post on the explore page Rudolph Garcia

--- a/app/src/main/res/layout/post_adapter.xml
+++ b/app/src/main/res/layout/post_adapter.xml
@@ -1,39 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardCornerRadius="3dp"
+    app:cardElevation="3dp"
+    app:cardUseCompatPadding="true"
+    android:clickable="true"
+    android:focusable="true"
+    android:foreground="?selectableItemBackground"
+    app:cardBackgroundColor="@color/cardview_light_background">
 
-    <ImageView
-        android:id="@+id/imagePostId"
-        android:layout_width="322dp"
-        android:layout_height="386dp"
-        android:layout_weight="1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.43" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="272dp"
+        android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/postTitleInList"
+            android:layout_width="171dp"
+            android:layout_height="48dp"
+            android:gravity="center"
+            android:text="TextView"
+            android:textSize="18sp" />
 
+        <ImageView
+            android:id="@+id/imagePostId"
+            android:layout_width="match_parent"
+            android:layout_height="167dp"
+            android:background="@color/white" />
 
-    <TextView
-        android:id="@+id/postTitleInList"
-        android:layout_width="165dp"
-        android:layout_height="46dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.182"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.15" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
 
+        </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
 
+        </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <Button
+            android:id="@+id/button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Recipe Ingredients and Directions" />
 
+    </LinearLayout>
+
+</androidx.cardview.widget.CardView>
 
