DisplayIngredientAndDirections added to display list. DirectionsAdapter, IngredientAdapter, and PostAdapter to get and display data.

--- a/app/src/main/res/layout/post_adapter.xml
+++ b/app/src/main/res/layout/post_adapter.xml
@@ -48,7 +48,7 @@
         </LinearLayout>
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/buttonToViewList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
