--- a/app/src/main/res/layout/activity_display_ingredient_and_directions.xml
+++ b/app/src/main/res/layout/activity_display_ingredient_and_directions.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ViewPost">
+    tools:context=".DisplayIngredientAndDirections">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -19,9 +19,10 @@
 
             <TextView
                 android:id="@+id/titleView"
+                android:text="TextView"
                 android:layout_width="match_parent"
                 android:layout_height="47dp"
-                android:text="TextView" />
+                 />
 
             <RatingBar
                 android:id="@+id/ratingBar2"
@@ -37,13 +38,7 @@
             <com.google.android.material.chip.ChipGroup
                 android:id="@+id/chipGroup"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <com.google.android.material.chip.Chip
-                    android:id="@+id/chip4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-            </com.google.android.material.chip.ChipGroup>
+                android:layout_height="match_parent"/>
 
             <ImageView
                 android:id="@+id/imageView"
