--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -95,15 +95,16 @@
 
     <TextView
         android:id="@+id/profileName"
-        android:layout_width="80dp"
-        android:layout_height="19dp"
+        android:layout_width="55dp"
+        android:layout_height="20dp"
         android:layout_marginStart="15dp"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="20dp"
-        android:layout_marginBottom="14dp"
+        android:layout_marginBottom="9dp"
         android:text="Name"
         app:layout_constraintBottom_toTopOf="@+id/profileDescription"
         app:layout_constraintEnd_toStartOf="@+id/profileLastName"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/profilePicture"
         app:layout_constraintTop_toBottomOf="@+id/profileUsername" />
 
@@ -126,12 +127,13 @@
         android:id="@+id/profileLastName"
         android:layout_width="107dp"
         android:layout_height="19dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="27dp"
-        android:layout_marginRight="27dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginRight="60dp"
+        android:layout_marginBottom="10dp"
         android:text="Last Name"
+        app:layout_constraintBottom_toTopOf="@+id/profileDescription"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/profileName"
         app:layout_constraintTop_toBottomOf="@+id/profileUsername" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
