--- a/app/src/main/res/layout/activity_display_ingredient_and_directions.xml
+++ b/app/src/main/res/layout/activity_display_ingredient_and_directions.xml
@@ -19,10 +19,15 @@
 
             <TextView
                 android:id="@+id/titleView"
-                android:text="TextView"
                 android:layout_width="match_parent"
                 android:layout_height="47dp"
-                 />
+                android:text="TextView" />
+
+            <TextView
+                android:id="@+id/userView"
+                android:layout_width="match_parent"
+                android:layout_height="34dp"
+                android:text="TextView" />
 
             <RatingBar
                 android:id="@+id/ratingBar2"
@@ -53,8 +58,8 @@
                 android:text="Ingredients" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:layout_width="389dp"
                 android:id="@+id/recyclerViewIngredient"
+                android:layout_width="match_parent"
                 android:layout_height="178dp" />
 
             <TextView
@@ -64,8 +69,8 @@
                 android:text="Directions" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:layout_width="390dp"
                 android:id="@+id/recyclerViewDirections"
+                android:layout_width="match_parent"
                 android:layout_height="173dp" />
 
             <TextView
@@ -81,6 +86,7 @@
 
             <Button
                 android:id="@+id/buttonGoBackToPost"
+                android:isIndicator="true"
                 android:layout_width="246dp"
                 android:layout_height="wrap_content"
                 android:text="Back to Explore" />
