Nick Thiemann 3/24/21 -Added recipe description to the view post page -Added recipe rating system to view post page

--- a/app/src/main/res/layout/activity_display_ingredient_and_directions.xml
+++ b/app/src/main/res/layout/activity_display_ingredient_and_directions.xml
@@ -52,6 +52,12 @@
                 android:src="@android:drawable/ic_menu_camera" />
 
             <TextView
+                android:id="@+id/descriptionText"
+                android:layout_width="match_parent"
+                android:layout_height="121dp"
+                android:text="TextView" />
+
+            <TextView
                 android:id="@+id/textView17"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
