--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -89,16 +89,16 @@
 
     <TextView
         android:id="@+id/textView16"
-        android:layout_width="99dp"
-        android:layout_height="42dp"
+        android:layout_width="76dp"
+        android:layout_height="43dp"
         android:text="Tags"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/searchView2"
-        app:layout_constraintHorizontal_bias="0.666"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.155"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.367" />
+        app:layout_constraintVertical_bias="0.364" />
 
     <ProgressBar
         android:id="@+id/progressBar"
