--- a/app/src/main/res/layout/directions_adapter.xml
+++ b/app/src/main/res/layout/directions_adapter.xml
@@ -23,15 +23,16 @@
             <TextView
                 android:id="@+id/NthDirectionId"
                 android:layout_width="52dp"
-                android:layout_height="match_parent"
+                android:layout_height="51dp"
+                android:text="N"
 
 
                 android:textColor="@color/black"
                 android:textSize="15sp" />
 
-            <EditText
+            <TextView
                 android:id="@+id/adapterDirectionsNameId"
-                android:layout_width="269dp"
+                android:layout_width="315dp"
                 android:layout_height="match_parent"
                 android:text="Direction"
                 android:textColor="@color/black"
