--- a/app/src/main/res/layout/ingredient_adapter.xml
+++ b/app/src/main/res/layout/ingredient_adapter.xml
@@ -16,13 +16,13 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center" >
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/adapterIngredientNameId"
-                android:layout_width="173dp"
+                android:id="@+id/amountIngredientId"
+                android:layout_width="40dp"
                 android:layout_height="51dp"
                 android:text="Name"
                 android:textColor="@color/black"
@@ -30,11 +30,20 @@
 
             <TextView
                 android:id="@+id/measurementIngredientId"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="Meausurement"
+                android:layout_width="123dp"
+                android:layout_height="51dp"
+                android:text="Measurement"
                 android:textColor="@color/black"
                 android:textSize="15sp" />
+
+            <TextView
+                android:id="@+id/adapterIngredientNameId"
+                android:layout_width="101dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="Name"
+                android:textColor="@color/black"
+               />
 
 
         </LinearLayout>
